<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="de.jandrotek.android.arobot.tab.MovementActivity">

    <item
        android:id="@+id/connect_device"
        android:icon="@drawable/ic_action_bluetooth"
        android:title="@string/insecure_connect"
        app:showAsAction="never"/>
        <!--app:showAsAction="ifRoom|withText"/>-->
    <!--sensor movement fragment-->
    <item
        android:id="@+id/action_sensor_fragment"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_sensor_fragment"/>
    <!--manual movement fragment-->
    <item
        android:id="@+id/action_manual_fragment"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_manual_fragment"/>
    <!--bluetooth chat fragment-->
    <item
        android:id="@+id/action_bluetooth_fragment"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_bluetooth_fragment"/>
    <!--setttings-->
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_about"/>

</menu>
